Add paragraph (line 38-41) Past_Present_Future.html and Add line 61 to Passions_and_Interests.html

--- a/Passions_and_Interests.html
+++ b/Passions_and_Interests.html
@@ -58,6 +58,7 @@
                   </p>
                   <p>I love singing, mainly when no-one listens. However, I hope to join a choir to delve into this interest some more and make it a proper passion.
                     I am quite okay at singing and don't mind going to karaoke whenever the opportunity arises.
+                    I have joined a choir, once upon a time and hope to join the Glasgow Rock Choir in September.
                     Maybe one day, I'll even learn an instrument just about enough to accompany my singing. But first, learning to code!
                   </p>
               </td>
