--- a/Past_Present_Future.html
+++ b/Past_Present_Future.html
@@ -35,6 +35,10 @@
                 <p>Within a couple of weeks there, I become a host/co-organizer for a social event.
                   The event was created for language learners to come together and explore London and its surrounding areas.
                 </p>
+                <p>After my au-pair days, I worked for a printing company with its international office in Ealing, London.
+                  In June 2016, the company moved this office back to Germany. Shortly after, I found a job as a customer
+                  service advisor for the LEGO Group where I stayed for over a year and a half.
+                </p>
               </td>
             </tr>
           </table>
